<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pangea</string>
    <string name="action_settings">Settings</string>
    <string name="broadcaster">MCharpentier23</string>
    <string name="location">Boston</string>
    <string name="views">743</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="pangea_background_image">Pangea Background Image</string>
    <string name="subtitle">By Nasser Eledroos &amp; Mike Charpentier</string>

</resources>
